[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/8bitOperatorPlus-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/TallMeter.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameTriggers/GameManager.gd" type="Script" id=3]
[ext_resource path="res://Audio/GameMusic.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/BackgroundPopup.png" type="Texture" id=5]
[ext_resource path="res://Scripts/GameTriggers/PausePopup.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 72
font_data = ExtResource( 1 )

[node name="GameManager" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TallMeterSprite" type="Sprite" parent="."]
position = Vector2( 192, 47 )
scale = Vector2( 1, 0.869565 )
texture = ExtResource( 2 )
hframes = 5
__meta__ = {
"_edit_lock_": true
}

[node name="TallMeterLabel" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 5.0
margin_right = 186.0
margin_bottom = 118.0
custom_fonts/normal_font = SubResource( 1 )
text = "Tall Meter:"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -194.0
margin_top = 5.0
margin_right = 194.0
margin_bottom = 118.0
custom_fonts/normal_font = SubResource( 2 )
text = "Press R to Restart"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -207.0
margin_top = 5.0
margin_bottom = 118.0
custom_fonts/normal_font = SubResource( 3 )
text = "Level: "
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelNumber" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_top = 5.0
margin_right = -13.0
margin_bottom = 105.0
custom_fonts/normal_font = SubResource( 4 )
text = "0
"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="PausePopup" type="Popup" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartSprite" type="Sprite" parent="PausePopup"]
pause_mode = 2
modulate = Color( 0, 0, 0, 0.313726 )
show_behind_parent = true
scale = Vector2( 15.18, 7.81 )
texture = ExtResource( 5 )

[node name="PauseText" type="RichTextLabel" parent="PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -64.5
margin_right = 151.0
margin_bottom = 64.5
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=4]PAUSED[/wave]"
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}
